<resources>
    <string name="app_name">NIKKAL</string>
    <string name="app_name1">Radio Online</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accion_agregar_favoritos">Agregar a Favoritos</string>
    <string name="tv_genero">Géneros</string>
    <string name="tv_sugerencia">Sugerencias</string>
    <string name="tv_mas_escuchado">Lo Más Escuchado</string>
    <string name="tv_favorito">Favoritos</string>
    <string name="btnbar_inicio">Inicio</string>
    <string name="btnbar_buscar">Buscar</string>
    <string name="btnbar_favorito">Favoritos</string>
    <string name="btnbar_radio">Radio</string>
    <string name="btnbar_ajuste">Ajuste</string>

    <string name="tv_busqueda_reciente">Busquedas recientes</string>
    <string name="hint_buscar">Buscar</string>
    <string name="tv_canciones_favoritas">Canciones</string>
    <string name="tv_artistas_favoritos">Artistas</string>
    <string name="tv_almbum_favoritos">Álbumes</string>
    <string name="tv_mis_playlist">Mis Listas de Reproducción</string>
    <string name="tv_titulo_favoritos">Favoritos</string>
    <string name="tv_escuchadas_recientemente">Escuchadas Recientemente</string>
    <string name="tv_titulo_escuchadas_recientemente">Escuchadas Recientemente</string>
    <string name="tv_subtitulo_escuchadas_recientemente">Subtitulo Escuchadas Recientemente</string>


</resources>
