<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout

            android:id="@+id/rlayoutFavoritosContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/titleFavoritos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorAccent"
                android:textSize="50sp"
                android:textStyle="bold"
                android:layout_alignParentLeft="true" />


                    <ImageView
                        android:id="@+id/ivIconoAlbumFavorito"
                        android:src="@drawable/ic_album_24dp"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:layout_below="@id/titleFavoritos"
                        />
                    <TextView
                        android:id="@+id/tvIconoAlbumFavorito"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_almbum_favoritos"
                        android:layout_toRightOf="@id/ivIconoAlbumFavorito"
                        android:layout_below="@id/titleFavoritos"
                        android:textSize="20sp"
                        android:textColor="@color/album_titulo"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"/>

                    <ImageView
                        android:id="@+id/ivIconoPitstaFavorita"
                        android:src="@drawable/ic_pista"
                        android:layout_below="@+id/ivIconoAlbumFavorito"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        />
                    <TextView
                        android:id="@+id/tvIconoPistaFavorita"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_canciones_favoritas"
                        android:layout_toRightOf="@id/ivIconoPitstaFavorita"
                        android:layout_below="@id/tvIconoAlbumFavorito"
                        android:textSize="20sp"
                        android:textColor="@color/album_titulo"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"/>

                    <ImageView
                        android:id="@+id/ivIconoArtistaFavorito"
                        android:src="@drawable/ic_artista"
                        android:layout_below="@+id/ivIconoPitstaFavorita"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        />
                    <TextView
                        android:id="@+id/tvIconoArtistaFavorito"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_artistas_favoritos"
                        android:layout_toRightOf="@id/ivIconoPitstaFavorita"
                        android:layout_below="@id/tvIconoPistaFavorita"
                        android:textSize="20sp"
                        android:textColor="@color/album_titulo"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"/>

                    <ImageView
                        android:id="@+id/ivIconoListaDeReproduccion"
                        android:src="@drawable/ic_listas_de_reproduccion"
                        android:layout_below="@+id/ivIconoArtistaFavorito"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        />
                    <TextView
                        android:id="@+id/tvIconoListaDeReproduccion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_mis_playlist"
                        android:layout_toRightOf="@id/ivIconoPitstaFavorita"
                        android:layout_below="@id/tvIconoArtistaFavorito"
                        android:textSize="20sp"
                        android:textColor="@color/album_titulo"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"/>



            <TextView
                android:id="@+id/tvEscuchadasRecientemente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvIconoListaDeReproduccion"
                android:text="@string/tv_escuchadas_recientemente"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"

                />

            <!-- TODO: Update blank fragment layout -->
            <android.support.v7.widget.RecyclerView
                android:layout_below="@id/tvEscuchadasRecientemente"
                android:id="@+id/recyclerFavoritos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                >

            </android.support.v7.widget.RecyclerView>


        </RelativeLayout>



    </ScrollView>


</FrameLayout>